added plugins and dependencies for MultiJvm [WIP]